--- a/downstream/modules/hub/proc-obtaining-org-collection-url.adoc
+++ b/downstream/modules/hub/proc-obtaining-org-collection-url.adoc
@@ -1,4 +1,4 @@
-[id="proc-create-api-token"]
+[id="retrieve-api-token_{context}"]
 = Retrieving the API token for your Red Hat Certified Collection
 
 You can synchronize {CertifiedName} curated by your organization from `{Console}` to your {PrivateHubName}.
