--- a/downstream/modules/platform/ref-controller-cleanup-expired-tokens.adoc
+++ b/downstream/modules/platform/ref-controller-cleanup-expired-tokens.adoc
@@ -12,4 +12,4 @@ For more information, see xref:proc-controller-scheduling-deletion[Scheduling de
 You can also set or review notifications associated with this management job the same way as described in xref:proc-controller-management-notifications[Setting notifications] for activity
 stream management jobs.
 
-For more information, see link:{URLControllerUserGuide}}/controller-notifications[Notifications] in _{ControllerUG}_.
+For more information, see link:{URLControllerUserGuide}/controller-notifications[Notifications] in _{ControllerUG}_.
