--- a/downstream/modules/platform/proc-run-jobs-on-execution-nodes.adoc
+++ b/downstream/modules/platform/proc-run-jobs-on-execution-nodes.adoc
@@ -6,7 +6,7 @@ You must specify where jobs are run, or they default to running in the control c
 
 To do this, set up a Job Template.
 
-For more information on Job Templates, see link:{URLControllerUserGuide}/controller-job-templates[Job Templates] in _{ControllerUG}_.
+For more information on Job Templates, see link:{URLControllerUserGuide}/controller-job-templates[Job templates] in _{ControllerUG}_.
 
 .Procedure
 
