--- a/downstream/modules/platform/ref-operator-mesh-prerequisites.adoc
+++ b/downstream/modules/platform/ref-operator-mesh-prerequisites.adoc
@@ -12,7 +12,7 @@ The following steps prepare the RHEL instances for deployment of the automation 
 . You require a {RHEL} operating system. 
 Each node in the mesh requires a static IP address, or a resolvable DNS hostname that {PlatformNameShort} can access. 
 . Ensure that you have the minimum requirements for the RHEL virtual machine before proceeding. 
-For more information, see the link:{URLInstallationGuide}/platform-system-requirements[System requirements].
+For more information, see the link:{URLPlanningGuide}/platform-system-requirements[System requirements].
 . Deploy the RHEL instances within the remote networks where communication is required.
 For information about creating virtual machines, see link:{BaseURL}/red_hat_enterprise_linux/9/html/configuring_and_managing_virtualization/assembly_creating-virtual-machines_configuring-and-managing-virtualization[Creating Virtual Machines] in the _{RHEL}_ documentation. Remember to scale the capacity of your virtual machines sufficiently so that your proposed tasks can run on them.
 
